public/index.css
.small-image {
  width: 160px;
  margin: 5px;
}

.navbar-room {
  margin-top: 75px;
}

.footer-room {
  margin-bottom: 25px;
}

.less-padding {
  padding-top: 10px;
}

.space-below {
  margin-bottom: 40px;
}

.space-above {
  margin-top: 30px;
}

.image-rows {
  margin-left: 20px;
  margin-right: 20px;
}

.home-post {
  max-height: 225px;
  overflow: hidden;
}

.post-image-home {
  width: 100%;
}

.bootstrap-card {
  position: relative;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: border-box;
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 0.25rem;
}

.card-body {
  padding: 20px;
  max-height: 500px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.post-rows {
  margin-left: 8%;
  margin-right: 8%;
}

.reading-rows {
  margin-left: 8%;
  margin-right: 8%;
}

div.admin-section {
  /*max-height: 300px;*/
  /*overflow: scroll;*/
  border-width: 3px;
  border-style: solid;
  border-color: gray;
  margin-bottom: 20px;
  padding: 15px;
}

.post-rows-edit {
  margin-left: 8%;
  margin-right: 8%;
  overflow: hidden;
}

.post-rows-edit-text {
  max-height: 200px;
  overflow: hidden;
}

.close-review {
  margin: 0px;
}

.gallery-image {
  max-height: 250px;
  max-width: 100%;
}

.fit-to-col {
  max-width: 100%;
  max-height: 250px;
}

.blog-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.bold {
  font-weight: bold;
}

.yellow {
  color: #EEE418;
}

.black {
  color: black;
}

.red {
  color: red;
}

.image-border {
  border-style: solid;
  border-width: 5px;
  border-color: black;
}

.about-image {
  float: right;
  width: 300px;
  transform: rotate(90deg);
  border-radius: 0.5rem;
}

.subscription-input {
  margin-right: 20px;
}

.subscription-section {
  margin-left: 20%;
  margin-right: 20%;
}

.add-new-content:hover {
  cursor: pointer;
}

.publication-row {
  height: 150px;
  overflow: hidden;
}

.additional-image {
  max-height: 300px;
  max-width: 300px;
  float: left;
  margin: 10px;
}

.clear {
  clear: both;
}

/*.btn {
  @extend .btn-sm;
}*/

/* MODAL STYLING */
.modal-content {
  max-height: 500px;
  overflow: scroll;
}

.modal-dialog {
  padding-top: 5%;
}

